Create dummy player-view